@@ -4,7 +4,9 @@
 package gnu.kawa.xml;
 import gnu.mapping.*;
 import gnu.lists.*;
+/* BEGIN JAVA2 */
 import java.util.Iterator;
+/* END JAVA2 */
 
 /* A function that maps an Iterator into the sequence of ite elements. */
 
@@ -18,7 +20,12 @@ public class IteratorItems extends CpsProcedure
     Object arg = ctx.getNextArg();
     ctx.lastArg();
 
+    /* BEGIN JAVA2 */
     Iterator iter = (Iterator) arg;
+    /* END JAVA2 */
+    /* BEGIN JAVA1 */
+    // SeqPosition iter = (SeqPosition) arg;
+    /* END JAVA1 */
     while (iter.hasNext())
       {
 	Object val = iter.next();
