@@ -4,8 +4,10 @@
 package gnu.kawa.xml;
 import gnu.mapping.*;
 import gnu.lists.*;
+/* BEGIN JAVA2 */
 import java.util.Iterator;
 import java.util.List;
+/* END JAVA2 */
 
 /* A function that maps a List into the sequence of ite elements. */
 
@@ -19,10 +21,11 @@ public class ListItems extends CpsProcedure
     Object arg = ctx.getNextArg();
     ctx.lastArg();
 
+    /* BEGIN JAVA2 */
     List list = (List) arg;
-    if (list instanceof AbstractSequence)
+    if (arg instanceof AbstractSequence)
       {
-	((AbstractSequence) list).consumePosRange(0, -1, out);
+	((AbstractSequence) arg).consumePosRange(0, -1, out);
 	return;
       }
     Iterator iter = list.iterator();
@@ -31,5 +34,9 @@ public class ListItems extends CpsProcedure
 	Object val = iter.next();
 	Values.writeValues(val, out);
       }
+    /* END JAVA2 */
+    /* BEGIN JAVA1 */
+    // ((AbstractSequence) arg).consumePosRange(0, -1, out);
+    /* END JAVA1 */
   }
 }
