@@ -1,3 +1,8 @@
+2003-05-04  Per Bothner  <per@bothner.com>
+
+	* ListItems.java:  Handle non-Java2 case.
+	* IteratorItems.java:  Handle non-Java2 case.
+
 2003-05-03  Per Bothner  <per@bothner.com>
 
 	* Focus.java.in:  Renemed to ..
